# CLaudeCodeProxy

./: .gitignore  CLAUDE_CODE_TOOLS_REFERENCE.md  CLAUDE_CODE_TOOLS_REFERENCE2.md  README.md  architecture.md  baseten_adapter.py  baseten_claude_proxy_enhanced.py  claudeproxy.bat  claudeproxy.sh  claudeproxy_backup.bat  claudeproxysetup.py  groq_adapter.py  groq_claude_proxy_enhanced.py  main_start.py  proxy_common.py  proxy_core.py  restart_handler.py  start_groq_proxy.bat  start_xai_proxy.bat  xai_adapter.py  xai_claude_proxy_enhanced.py
claude-proxy-installer/: .gitignore  BUILD.md  INSTALLER-ARCHITECTURE.md  INSTALLER-SUMMARY.md  README.md  VISUAL-ENHANCEMENTS.md  index.html  package-lock.json  package.json  vite.config.js
claude-proxy-installer/proxy-scripts/: claudeproxy.bat  claudeproxy.sh  groq_claude_proxy_enhanced.py  start_groq_proxy.bat  start_xai_proxy.bat  xai_claude_proxy_enhanced.py
claude-proxy-installer/src/: App.vue  styles.css
claude-proxy-installer/src-tauri/: Cargo.toml  tauri.conf.json
claude-proxy-installer/src-tauri/icons/: create_ico.py
claude-proxy-installer/src-tauri/nsis/: installer.nsh
claude-proxy-installer/src-tauri/src/: dependency_detector.rs  downloader.rs  installer.rs  main.rs
releases/: README.md
